--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {"rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://skillsync-api-deployment.vercel.app/api/:match*"
+      "destination": "https://one-stop-backend-two.vercel.app/api/:match*"
     }
   ]}
